--- a/assig7/assig7.html
+++ b/assig7/assig7.html
@@ -101,7 +101,7 @@
     <script type='text/javascript' src="https://cdn.jsdelivr.net/jquery.validation/1.14.0/additional-methods.js"></script>
 
     <!-- JS file that handles the multiplication table and validate code -->
-    <script type='text/javascript' src="js/table_v2.js"></script>
+    <script type='text/javascript' src="js/table.js"></script>
 
     <!-- Load the header/footer when the page is ready. Also load the validate() function -->
     <script>
