--- a/assig8/assig8.html
+++ b/assig8/assig8.html
@@ -167,7 +167,7 @@
   <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
   <!-- JS file that handles the multiplication table and validate code -->
-  <script type='text/javascript' src="js/table_v3.js"></script>
+  <script type='text/javascript' src="js/table_.js"></script>
 
   <!-- Load the header/footer when the page is ready. Also load the validate() function -->
   <script>
