--- a/assig7/assig7.html
+++ b/assig7/assig7.html
@@ -67,7 +67,7 @@
                  spot errors, while onclick doesn't force the page to refresh because
                  of the return false in the onsubmit form attribute. -->
             <input id="button_submit" class="submit_button" type="submit" value="Generate Table">
-            <input type ="reset" value ="Reset"/>
+            <input type ="reset" class="submit_button" value ="Reset"/>
           </form>
 
           <!-- Error messages will appear here instead of in a popup. -->
